<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChannelsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvChannelsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:text="@string/tvChannelsTitle"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="5dp">

            <Button
                android:id="@+id/bSelect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/bSelect"
                android:textColor="@android:color/background_light"
                android:textStyle="bold" />

            <Button
                android:id="@+id/bAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/bAdd"
                android:textColor="@android:color/background_light"
                android:textStyle="bold" />

            <Button
                android:id="@+id/bDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/bDelete"
                android:textColor="@android:color/background_light"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/channelsLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>